# tinysecrets

./: .gitignore  Cargo.toml  README.md  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
src/: config.rs  crypto.rs  keychain.rs  main.rs  schema.sql  store.rs
src/cli/: config.rs  delete.rs  envs.rs  examples.rs  export.rs  get.rs  history.rs  import.rs  import_env.rs  init.rs  keychain_cmd.rs  list.rs  migrate.rs  mod.rs  projects.rs  run.rs  set.rs
